--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ SRCS:=$(wildcard *.c)
 OBJS:=$(SRCS:.c=.o)
 
 LIB:= -llink_core -lmiddleware_implementation -lplatform_port -lutils_modules -largp\
--lubus -lubox -lblobmsg_json -llua
+-llua
 #LDFLAGS:=-L../sdk/build/lib $(LIB)
 INC:= -I./includes
  #-I../sdk/utils -I../sdk/include -I../sdk/interface -I../sdk/libraries/coreJSON/source/include 
